@@ -1,5 +1,5 @@
 /////////////////////////////////////////////////////////////////////////
-// $Id: proc_ctrl.cc,v 1.120 2005/10/18 18:07:52 sshwarts Exp $
+// $Id: proc_ctrl.cc,v 1.121 2005/10/23 21:11:32 sshwarts Exp $
 /////////////////////////////////////////////////////////////////////////
 //
 //  Copyright (C) 2001  MandrakeSoft S.A.
@@ -688,7 +688,7 @@ void BX_CPU_C::MOV_RdCd(bxInstruction_c *i)
       BX_INFO(("MOV_RdCd: read of CR4 causes #UD"));
       UndefinedOpcode(i);
 #else
-      BX_INFO(("MOV_RdCd: read of CR4"));
+      BX_DEBUG(("MOV_RdCd: read of CR4"));
       val_32 = BX_CPU_THIS_PTR cr4.getRegister();
 #endif
       break;
@@ -834,7 +834,7 @@ void BX_CPU_C::MOV_RqCq(bxInstruction_c *i)
       val_64 = BX_CPU_THIS_PTR cr3;
       break;
     case 4: // CR4
-      BX_INFO(("MOV_RqCq: read of CR4"));
+      BX_DEBUG(("MOV_RqCq: read of CR4"));
       val_64 = BX_CPU_THIS_PTR cr4.getRegister();
       break;
 #if BX_SUPPORT_APIC
